---------------------------------------------------------------------------------------------------
Version: 0.3.10
Date: 2025-04-11
  Features:
    - Added freezing and thawing recipes
    - Added locale for subgroups and categories
  Bugfixes:
    - Fixed agricultural science pack recipe
---------------------------------------------------------------------------------------------------
Version: 0.3.9
Date: 2025-04-04
  Features:
    - New biological / agricultural tech tree
    - Added herbarium
    - Added CN locale thanks to rlcyyg1108
  Changes:
    - Updated woodfarming icon
    - Renamed krastorio bio lab to genetics facility
    - Renamed gyro to gyroscope
    - Pressure tube now also requires seal
    - Updated gun turret recipe
  Balancing:
    - Increased fuel values by 5
    - Increased energy production by 5 or more of all power generation buildings
    - Inserters require less energy
    - Magazines and shotgun shells do now much more damage
    - Weapon damage and shooting speed technologies have many more tiers and provide stronger bonuses
    - I intend to add more military balancing in the future (for now firearms are op compared to anything else)
  Bugfixes:
    - Enriching crushed iron ore now correctly produces enriched iron
    - Carbon fiber can be now produced in chemical plant
    - Lead molybdate can be now produced in induction hardening facility
    - Fixed recipe for research server due to cyclic dependency in tech tree
---------------------------------------------------------------------------------------------------
Version: 0.3.8b
Date: 2025-03-22
  Bugfixes:
    - Fixed compatibility with factorio 2.0.42
---------------------------------------------------------------------------------------------------
Version: 0.3.8
Date: 2025-03-21
  Features:
    - Added more items
  Changes:
    - Updated recipe chain for recycler
    - Updated recipe chain for nuclear reactor
    - Updated locale
    - Updated graphics of buildings